# bgj6cra

./: Cargo.toml  README.md
.github/workflows/: LICENSE-MIT.txt  release.yaml
art/: oga-by-40.txt
art/models/: models.blend  models.blend1
art/player-ship/: player-ship.blend  player-ship.blend1
assets/backgrounds/: generic-background.glb
assets/enemies/: enemy-defender-one.glb  enemy-defender-three.glb  enemy-defender-two.glb  enemy-land.glb  enemy-one-base.glb  enemy-one.glb  enemy-shadow.glb  enemy-wall.glb
assets/explosions/: enemy-base-explosion.glb  enemy-explosion.glb  enemy-land-explosion.glb
assets/player-explosion/: player-explosion.glb
assets/player-ship/: player-ship.glb
assets/projectiles/: player-projectile.glb
assets/styles/: all.css  base.css  game_menu.css  level_complete.css  stage.css
src/: app_state.rs  collisions.rs  debug.rs  enemy.rs  energy.rs  explosion.rs  level.rs  lib.rs  main.rs  menu.rs  player.rs  screen.rs  stage.rs  window.rs
src/gameplay/: collisions.rs  enemy.rs  explosion.rs  game_run.rs  level.rs  mod.rs  player.rs  stage.rs
src/levels/: mod.rs  training_01.rs  training_02.rs
src/levels/game/: choose_01.rs  choose_02.rs  corridor_01.rs  corridor_02.rs  game_01.rs  game_02.rs  in_yer_face_1.rs  in_yer_face_2.rs  in_yer_face_3.rs  mod.rs  path.rs  path_01.rs  path_02.rs  path_03.rs
src/levels/training/: base.rs  defenders.rs  land.rs  mod.rs  secondary.rs  shadow.rs  training_02.rs  training_03.rs  wall.rs
src/menus/: level_complete.rs  level_select_menu.rs  main_menu.rs  mod.rs
src/screens/: gameplay_screen.rs  loading_screen.rs  mod.rs  new_game_run.rs  ready_screen.rs  title_screen.rs
